--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
 clang==5.0
-dataclasses==0.6
+dataclasses==0.8
 Django==3.2.8
 flatbuffers==1.12
 gast==0.4.0
@@ -14,6 +14,7 @@ google-auth==2.3.2
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.41.1
+gunicorn==20.1.0
 h5py==3.1.0
 idna==3.3
 importlib-metadata==4.8.1
@@ -22,6 +23,7 @@ Keras-Preprocessing==1.1.2
 Markdown==3.3.4
 numpy==1.19.5
 oauthlib==3.1.1
+opencv-python==4.5.4.58
 opt-einsum==3.3.0
 protobuf==3.19.1
 pyasn1==0.4.8
@@ -41,5 +43,6 @@ termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.7
 Werkzeug==2.0.2
+whitenoise==5.3.0
 wrapt==1.12.1
 zipp==3.6.0
