--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Keras-Preprocessing==1.1.2
 Markdown==3.3.4
 numpy==1.19.5
 oauthlib==3.1.1
-opencv-python==4.5.4.58
+opencv-python-headles==4.5.4.58
 opt-einsum==3.3.0
 protobuf==3.19.1
 pyasn1==0.4.8
